Added ready set experiment

--- a/src/synthetic_workload/CMakeLists.txt
+++ b/src/synthetic_workload/CMakeLists.txt
@@ -28,8 +28,11 @@ ament_target_dependencies(mt_exec_personal_nodes rclcpp std_msgs synthetic_workl
 add_executable(mt_exec_casini_copy src/mt_exec_casini_copy.cpp)
 ament_target_dependencies(mt_exec_casini_copy rclcpp std_msgs synthetic_workload_msgs)
 
+add_executable(mt_exec_ready_set src/mt_exec_ready_set.cpp)
+ament_target_dependencies(mt_exec_ready_set rclcpp std_msgs synthetic_workload_msgs)
+
 install(TARGETS
-  mt_exec_shared_node mt_exec_personal_nodes mt_exec_casini_copy
+  mt_exec_shared_node mt_exec_personal_nodes mt_exec_casini_copy mt_exec_ready_set
   DESTINATION lib/${PROJECT_NAME}
 )
 
